messaggi funzionanti cosi e cosi

--- a/index.html
+++ b/index.html
@@ -21,17 +21,35 @@
                     <div class="dim"></div>
                     <div id="dim2"></div>
                     <div class="dim3">
-                        <div class="chat" v-for="(contact, index) in contacts"
+                        <div class="chat over" v-for="(contact, index) in contacts"
                         :class="(index === activeContact) ? 'contact active' : 'contact'"
                         @click="setActiveConversation(index)">
                            <div class="userpic">
                             <img :src="'img/avatar' + contact.avatar + '.jpg'" :alt="contact.name">
+                           
+                           </div>
+                           <div class="info">
+                               <span>{{contact.name}}</span> <br>
+                               <span class="lastmsg">Ultimo messaggio inviato</span>
+                           </div>  
+                           <div class="ora">
+                            <span class="lastmsg">12:00</span>
                            </div>
                         </div>
                     </div>
                 </div>
                 <div id="right">
+                  <div id="topbar"></div>
+                  <div id="center">
+                    <div class="message" 
+                    v-for="(message, index) in contacts[activeContact].messages"
+                    :class="(message.status === 'sent') ? 'sent' : 'received'">
+                        <span class="message">{{message.message}}</span>
+                    </div>
+                  </div>
+                  <div id="footerbar">
 
+                  </div>
                 </div>
             </div>
             <div id="b_1"></div>
