--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
                     </div>
                 </div>
                 <div id="right">
-                  <div id="topbar"></div>
+                  <div id="topbar">
+                    <div class="userpic">
+                        <img :src="'img/avatar' + contacts[activeContact].avatar + '.jpg'" :alt="contacts[activeContact].name">
+                    </div>
+                    <div class="userid">
+                        <span>{{contacts[activeContact].name}}</span> <br>
+                        <span class="lastmsg">ultimo accesso alle 12:00</span>
+                    </div>
+                  </div>
                   <div id="center">
                     <div class="message" 
                     v-for="(message, index) in contacts[activeContact].messages"
